lang/src/ast/snapshots/rain_lang__ast__expr__test__maths_parens1.snap
---
source: lang/src/ast/expr.rs
expression: "parse_display_expr(\"1 - (a + 3) * 4\")"
---
BinaryOp(
 Number(1)
 Subtraction(-)
 BinaryOp(
  BinaryOp(
   Ident(a)
   Addition(+)
   Number(3)
  )
  Multiplication(*)
  Number(4)
 )
)
