lang/src/ast/snapshots/rain_lang__ast__expr__test__number_add.snap
---
source: lang/src/ast/expr.rs
expression: "parse_display_expr(\"1 + 1\")"
---
BinaryOp(
 Number(1)
 Plus(+)
 Number(1)
)
