lang/src/ast/snapshots/rain_lang__ast__expr__test__number_add_subtrace_multiply_divide_precedence.snap
---
source: lang/src/ast/expr.rs
expression: "parse_display_expr(\"1 - 3 / 2 + 4 * 3\")"
---
BinaryOp(
 BinaryOp(
  Number(1)
  Subtraction(-)
  BinaryOp(
   Number(3)
   Division(/)
   Number(2)
  )
 )
 Addition(+)
 BinaryOp(
  Number(4)
  Multiplication(*)
  Number(3)
 )
)
