lang/src/ast/snapshots/rain_lang__ast__expr__test__number_add_subtract_multiply_precedence.snap
---
source: lang/src/ast/expr.rs
expression: "parse_display_expr(\"5 * 2 + 3 - 4\")"
---
BinaryOp(
 BinaryOp(
  BinaryOp(
   Number(5)
   *
   Number(2)
  )
  +
  Number(3)
 )
 -
 Number(4)
)
